--- a/index.html
+++ b/index.html
@@ -1,11 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github portfolio sample</title>
+    <title>github portfolio</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    wa-o
+    <header class=gloval-nav>
+        <h1>Portfolio</h1>
+        <nav class=menu>
+          <ul>
+             <li>
+                <a href="#top">Top</a>
+             </li>
+             <li>
+                <a href="#about">About</a>
+             </li>
+             <li>
+                <a href="#works">Works</a>
+             </li>
+             <li>
+                <a href="#skills">Skills</a>
+             </li>
+          </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="top">
+            <h1>Welcome to portfolio site.</h1>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <div class="proitems">
+             <div calss="pro_img"><img src="img/pro-img.JPG" alt="profile_img"></div>
+             <div class="profile">
+                <table>
+                    <tbody>
+                        <tr class="pro-text">
+                            <th>Name</th>
+                            <td>栗尾 優孝 (Yutaka Kurio)</td>
+                        </tr>
+                        <tr class="pro-text">
+                            <th>University</th>
+                            <td>愛知工業大学 情報科学科 メディア情報専攻</td>
+                        </tr>
+                        <tr class="pro-text">
+                            <th>GitHub</th>
+                            <td><a href="https://github.com/ruuym">ruuym</a></td>
+                        </tr>
+                        <tr class="pro-text">
+                            <th>Twitter</th>
+                            <td><a href="https://twitter.com/amaguri__p">ruuym</a></td>
+                        </tr>
+                        <tr class="pro-text">
+                            <th>メール</th>
+                            <td>ruuym.p@gmail.com</td>
+                        </tr>
+                        <tr class="pro-text">
+                            <th>me</th>
+                            <td>最近少女漫画にはまりがちな22歳<br>
+                                男性向けのレビューサイトを書きなぐってみても面白そうかなと思ったり</td>
+                        </tr>
+                    </tbody>
+                </table>
+             </div>
+            </div> 
+        </section>
+        <section id="works">
+            <h2>Works</h2>
+            <div class="works-items">
+                <article class="content">
+                    <a href="#about">
+                        <img src="img/pro-img.JPG">
+                        <h3>タイトル</h3>
+                        <p>説明文<br>とりあえずリンク先をaboutに</p>
+                    </a>
+                </article>
+                <article class="content">
+                    <a href="#about">
+                        <img src="img/pro-img.JPG">
+                        <h3>タイトル</h3>
+                        <p>説明文<br>とりあえずリンク先をaboutに</p>
+                    </a>
+                </article>
+                <article class="content">
+                    <a href="#about">
+                        <img src="img/pro-img.JPG">
+                        <h3>タイトル</h3>
+                        <p>説明文<br>とりあえずリンク先をaboutに</p>
+                    </a>
+                </article>
+                <article class="content">
+                    <a href="#about">
+                        <img src="img/pro-img.JPG">
+                        <h3>タイトル</h3>
+                        <p>説明文<br>とりあえずリンク先をaboutに</p>
+                    </a>
+                </article>
+                <article class="content">
+                    <a href="#about">
+                        <img src="img/pro-img.JPG">
+                        <h3>タイトル</h3>
+                        <p>説明文<br>とりあえずリンク先をaboutに</p>
+                    </a>
+                </article>
+            </div>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <div class="skill-list">
+                <ul>
+                    <li>After Effect</li>
+                    <li>C</li>
+                    <li>C++</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
